--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Matthew Forum
+    Date:  07/13/18 
     Filename: index.html
    -->    
     
